--- a/mockup.html
+++ b/mockup.html
@@ -13,8 +13,6 @@
       <h3>CATS IN THE NEWS</h3>
       <p>Chew iPad power cord why must they do that, grab pompom in mouth and put in water dish.</p>
       <a href="#">Find out more >></a>
-    </section>
-    <section>
       <p>Chew iPad power cord why must they do that, grab pompom in mouth and put in water dish.</p>
       <a href="#">Find out more >></a>
     </section>
@@ -28,7 +26,7 @@
     </section>
   </aside>
   <footer>
-    <img src="images/cat-logo.png">
+    <img src="images/cat-logo.png" alt="White cat silhouette next to the words CAT LOGO">
     <p class="footer-text">Aborpos nisto inci tet aut que volupti beruptiberro to ex<br>
 esseque invenienihil imaximu scideru ptistiusam consequunt</p>
     <ul class="footer-links">
