finished 2nd page

--- a/mockup.html
+++ b/mockup.html
@@ -12,9 +12,9 @@
     <section>
       <h3>CATS IN THE NEWS</h3>
       <p>Chew iPad power cord why must they do that, grab pompom in mouth and put in water dish.</p>
-      <a href="#">Find out more >></a>
+      <a href="mockup-page2.html">Find out more >></a>
       <p>Chew iPad power cord why must they do that, grab pompom in mouth and put in water dish.</p>
-      <a href="#">Find out more >></a>
+      <a href="mockup-page2.html">Find out more >></a>
     </section>
     <section>
       <h3>CAT OF THE WEEK</h3>
@@ -22,7 +22,7 @@
         <img src="images/sidebar-cat.jpg" alt="An adorable grey and white kitten with blue green eyes">
         <figcaption>Stare at imaginary bug love blinks and purr purr purr purr.</figcaption>
       </figure>
-      <a href="#">Book Now >></a>
+      <a href="mockup-page2.html">Book Now >></a>
     </section>
   </aside>
   <footer>
