updated alt text for logo

--- a/mockup-page2.html
+++ b/mockup-page2.html
@@ -55,7 +55,7 @@
   </section>
 
   <footer>
-    <img src="images/cat-logo.png" alt="White cat silhouette next to the words CAT LOGO">
+    <img src="images/cat-logo.png" alt="White cat silhouette next to the words CAT LOGO, the Kitties to Go! logo">
     <p class="footer-text">Aborpos nisto inci tet aut que volupti beruptiberro to ex<br>
 esseque invenienihil imaximu scideru ptistiusam consequunt</p>
     <ul class="footer-links">
