--- a/mockup.html
+++ b/mockup.html
@@ -26,7 +26,7 @@
     </section>
   </aside>
   <footer>
-    <img src="images/cat-logo.png" alt="White cat silhouette next to the words CAT LOGO">
+    <img src="images/cat-logo.png" alt="White cat silhouette next to the words CAT LOGO, the Kitties to Go! logo">
     <p class="footer-text">Aborpos nisto inci tet aut que volupti beruptiberro to ex<br>
 esseque invenienihil imaximu scideru ptistiusam consequunt</p>
     <ul class="footer-links">
