updated name change in 2nd page

--- a/mockup-page2.html
+++ b/mockup-page2.html
@@ -17,9 +17,9 @@
     <section>
       <h3>CATS IN THE NEWS</h3>
       <p>Chew iPad power cord why must they do that, grab pompom in mouth and put in water dish.</p>
-      <a href="mockup.html">Find out more >></a>
+      <a href="index.html">Find out more >></a>
       <p>Chew iPad power cord why must they do that, grab pompom in mouth and put in water dish.</p>
-      <a href="mockup.html">Find out more >></a>
+      <a href="index.html">Find out more >></a>
     </section>
     <section>
       <h3>CAT OF THE WEEK</h3>
@@ -27,7 +27,7 @@
         <img src="images/sidebar-cat.jpg" alt="An adorable grey and white kitten with blue green eyes">
         <figcaption>Stare at imaginary bug love blinks and purr purr purr purr.</figcaption>
       </figure>
-      <a href="mockup.html">Book Now >></a>
+      <a href="index.html">Book Now >></a>
     </section>
   </aside>
 
@@ -41,7 +41,7 @@
       <figcaption>Mayor Stubbs reclining on a car</figcaption>
     </figure>
     <p>Stubbs was the mayor of Talkeetna, AK from 1997 until his death in 2017. The townsfolk described Stubbs as the best mayor they've ever had because he didn't change anything. Not only was Stubbs an elected official, he was quite the adventurer too! One time he hitched a ride to the edge of Talkeetna on the back of a garbage truck!</p>
-    <a href="mockup.html">Learn More >></a>
+    <a href="index.html">Learn More >></a>
   </section>
 
   <section>
@@ -51,7 +51,7 @@
       <figcaption>Here's Tara recieving the Hero Dog award for saving 4 year-old Jeremy Triantafilo from a viscious dog attack in their home driveway.</figcaption>
     </figure>
       <p>On May 13, 2014, Jeremy Triantafilo, a four-year-old boy with autism, was riding his bicycle in his family's driveway in Bakersfield, California, when a neighborhood dog, described as an 8-month-old Labrador and Chow mix, came from behind and attacked his leg. The dog was pulling Jeremy down his driveway when Tara, who the family states was very attached to Jeremy, tackled the dog and chased him away, then returned to Jeremy's side to check on him. Jeremy needed 10 stitches in his left calf following the attack, but he quickly recovered and was thankful for Tara's actions, calling her "my hero"</p>
-    <a href="mockup.html">Learn More >></a>
+    <a href="index.html">Learn More >></a>
   </section>
 
   <footer>
