Made the mockup more of a real page

--- a/mockup-page2.html
+++ b/mockup-page2.html
@@ -11,7 +11,12 @@
 
   <header>
     <h1>Kitties to Go!</h1>
+    <h3>Seattle's #1 Cat Rental Solution</h3>
   </header>
+
+  <nav>
+    <p>About / Rates / Liability Release / Kitty Profiles / Rent A Cat</p>
+  </nav>
 
   <aside>
     <section>
@@ -31,10 +36,10 @@
     </section>
   </aside>
 
-  <h2>Famous and Amazing Cats!</h2>
-  <h3>These cats are absolutely astounding! Check out these purr-fect kitties!</h3>
+  <h2 class="famous">Famous and Amazing Cats!</h2>
+  <h3 class="famous">These cats are absolutely astounding! Check out these purr-fect kitties!</h3>
 
-  <section>
+  <section class="famous">
     <h4>Stubbs</h4>
     <figure>
       <img src="images/mayor-stubbs.jpg" alt="an orange cat with closed eyes laying on top of a car">
@@ -44,13 +49,13 @@
     <a href="index.html">Learn More >></a>
   </section>
 
-  <section>
+  <section class="famous">
     <h4>Tara</h4>
     <figure>
       <img src="images/tara.jpg" alt="Tara, a brown cat with yellow eyes, sits in front of her SPCA Hero Dog award" id="tara">
       <figcaption>Here's Tara recieving the Hero Dog award for saving 4 year-old Jeremy Triantafilo from a viscious dog attack in their home driveway.</figcaption>
     </figure>
-      <p>On May 13, 2014, Jeremy Triantafilo, a four-year-old boy with autism, was riding his bicycle in his family's driveway in Bakersfield, California, when a neighborhood dog, described as an 8-month-old Labrador and Chow mix, came from behind and attacked his leg. The dog was pulling Jeremy down his driveway when Tara, who the family states was very attached to Jeremy, tackled the dog and chased him away, then returned to Jeremy's side to check on him. Jeremy needed 10 stitches in his left calf following the attack, but he quickly recovered and was thankful for Tara's actions, calling her "my hero"</p>
+      <p id="tara-text">On May 13, 2014, Jeremy Triantafilo, a four-year-old boy with autism, was riding his bicycle in his family's driveway in Bakersfield, California, when a neighborhood dog, described as an 8-month-old Labrador and Chow mix, came from behind and attacked his leg. The dog was pulling Jeremy down his driveway when Tara, who the family states was very attached to Jeremy, tackled the dog and chased him away, then returned to Jeremy's side to check on him. Jeremy needed 10 stitches in his left calf following the attack, but he quickly recovered and was thankful for Tara's actions, calling her "my hero"</p>
     <a href="index.html">Learn More >></a>
   </section>
 
