--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 
 <body>
+
+  <header>
+    <h1>Kitties to Go!</h1>
+    <h3>Seattle's #1 Cat Rental Solution</h3>
+  </header>
+
+  <nav>
+    <p>About / Rates / Liability Release / Kitty Profiles / Rent A Cat</p>
+  </nav>
+
   <aside>
     <section>
       <h3>CATS IN THE NEWS</h3>
@@ -25,6 +35,25 @@
       <a href="mockup-page2.html">Book Now >></a>
     </section>
   </aside>
+
+  <section class="famous">
+    <h3>Donec vestibulum bibendum scelerisque</h3>
+    <p>Cras interdum fermentum semper. Nullam consequat molestie leo, nec bibendum massa molestie ut. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit neque vel libero blandit, vitae blandit mi dignissim. Sed egestas metus efficitur nulla ullamcorper, ac feugiat enim suscipit. Duis ac magna eu libero accumsan varius. Nunc metus orci, fermentum et ligula quis, suscipit interdum odio. Aenean aliquet enim urna, quis congue massa cursus vitae.</p>
+  </section>
+
+  <section class="famous">
+    <h3>Here's what our customers have to say:</h3>
+    <p>"I've never been able to rent so many cats so last minute! These people really come through!" -Paul B.</p>
+    <p>"Not only was the service extremely fast but the cats are so soft and fluffy!" -Christine H.</p>
+  </section>
+
+  <section class="famous">
+    <h3>Where We Started and What's Ahead:</h3>
+    <p>Vestibulum ex est, feugiat id sagittis ac, vehicula commodo dolor. Fusce vel suscipit metus. Maecenas sit amet rhoncus tellus. Maecenas facilisis turpis elit, non porttitor risus porta eget. Nullam ac nibh vestibulum, tempor leo in, vehicula ante. Sed metus libero, tincidunt vel nisl varius, convallis bibendum libero. Vestibulum aliquam eget purus at pretium. Praesent libero eros, posuere quis elit sit amet, aliquam vestibulum dui. Praesent ut felis eget nisi auctor eleifend vitae quis odio.</p>
+    <br>
+    <p>Ut risus tortor, vehicula sit amet elementum id, dapibus in nisi. Ut vestibulum elementum sapien nec pulvinar. Nullam sit amet purus est. Praesent aliquam ipsum eu dignissim mattis. Phasellus quis nunc neque. Nulla facilisi. Proin ut ante bibendum, tempor nunc sit amet, viverra neque. Integer scelerisque tempus neque, ac porta lectus eleifend porta. Nam felis dolor, ullamcorper et libero nec, volutpat maximus libero.</p>
+  </section>
+
   <footer>
     <img src="images/cat-logo.png" alt="White cat silhouette next to the words CAT LOGO, the Kitties to Go! logo">
     <p class="footer-text">Aborpos nisto inci tet aut que volupti beruptiberro to ex<br>
