updated site for better a11y

--- a/mockup-page2.html
+++ b/mockup-page2.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Kitties to Go!</title>
+  <title>Famous Cats!</title>
   <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
 </head>
 
@@ -60,7 +60,7 @@
   </section>
 
   <footer>
-    <img src="images/cat-logo.png" alt="White cat silhouette next to the words CAT LOGO, the Kitties to Go! logo">
+    <img src="images/cat-logo.png" alt="Kitties to Go! logo">
     <p class="footer-text">Aborpos nisto inci tet aut que volupti beruptiberro to ex<br>
 esseque invenienihil imaximu scideru ptistiusam consequunt</p>
     <ul class="footer-links">
